# bench-pg

./: .gitignore  README.md  run-all.sh
golang/: go.mod  go.sum  main.go
golang/api/: api.go
golang/benchmark/: init.go  prepare_operations.go  run.go  task.go  user_worker.go
golang/config/: config.go
golang/executors/: create.go
golang/executors/gorm_ex/: close_period.go  cost.go  executor.go  init.go  open_period.go  post_document.go  purchase.go  report.go  sale.go
golang/executors/sqlx_ex/: close_period.go  cost.go  executor.go  init.go  open_period.go  post_document.go  purchase.go  report.go  sale.go
golang/model/domain/: account.go  customer.go  document.go  material.go  operation.go  period.go  user.go  vendor.go
golang/model/metrics/: action.go  metrics.go  (+1 more)
golang/statistics/: run.go  save_metrics.go  save_statistics.go
rust/: .env  .gitignore  Cargo.toml
rust/src/: api.rs  config.rs  lib.rs  main.rs
rust/src/benchmark/: init.rs  mod.rs  prepare_operations.rs  task.rs  user_worker.rs
rust/src/executors/: mod.rs
rust/src/executors/diesel/: close_period.rs  cost.rs  init.rs  mod.rs  open_period.rs  post_document.rs  purchase.rs  report.rs  sale.rs  schema.rs
rust/src/executors/sqlx/: close_period.rs  cost.rs  init.rs  mod.rs  open_period.rs  post_document.rs  purchase.rs  report.rs  sale.rs
rust/src/executors/tokio/: close_period.rs  cost.rs  init.rs  mod.rs  open_period.rs  post_document.rs  purchase.rs  report.rs  sale.rs
rust/src/model/: mod.rs
rust/src/model/domain/: account.rs  business_partner.rs  customer.rs  document.rs  material.rs  mod.rs  operation.rs  period.rs  user.rs  vendor.rs
rust/src/model/metrics/: action.rs  metrics.rs  mod.rs  statistics.rs
rust/src/statistics/: create_benchmark.rs  mod.rs  pool.rs  save_metrics.rs  save_statistics.rs
sql/: ddl.sql
(+16 files in other folders)
