[package]
name = "bench-pg-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive", "string"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "migrate", "rust_decimal"] }
rand = "0.9.0"
chrono = "0.4.41"
stats-cli = "3.0.1"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "numeric"] }
pq-sys = { version = "0.7", features = ["bundled"] }
rust_decimal = { version = "1.37.2", features = ["db-diesel2-postgres", "db-tokio-postgres"] }
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
lazy_static = "1.5.0"
