[package]
name = "bench-pg-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "string"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "migrate", "rust_decimal"] }
rand = "0.9.2"
chrono = "0.4.42"
stats-cli = "3.0.1"
diesel = { version = "2.3.3", features = ["postgres", "r2d2", "chrono", "numeric"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
rust_decimal = { version = "1.39.0", features = ["db-diesel2-postgres", "db-tokio-postgres"] }
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
lazy_static = "1.5.0"
async-channel = "2.5.0"
